Added js executor for variables; removed modularity